Home Page, still need add animation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,25 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentorship Matching Platform</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/home.css">
     <!-- Page-specific CSS will be linked based on the active page -->
 </head>
-<body>
+<body class="home-page">
     <!-- Header with navigation -->
     <header>
-        <!-- Navigation and logo will go here -->
+        <nav class="navbar">
+            <div class="navbar-brand">
+                <a href="/">Virtual Internship</a>
+            </div>
+            <div class="navbar-menu">
+                <a href="/">Home</a>
+                <a href="/about">About</a>
+            </div>
+            <div class="navbar-auth">
+                <a href="/signin" class="btn">Sign In</a>
+                <a href="/signup" class="btn btn-outline">Sign Up</a>
+            </div>
+        </nav>
     </header>
 
     <!-- Main content area -->
     <main id="app">
-        <!-- Dynamic content will be loaded here -->
+        <!-- Home Page Hero Section -->
+        <section class="hero">
+            <div class="hero-content">
+                <div class="title-container">
+                    <h1 class="hero-title">Your Mentor</h1>
+                </div>
+                <p class="hero-subtitle">who can guide your career journey</p>
+                <div class="hero-actions">
+                    <a href="/signin" class="btn btn-try">Try here</a>
+                    <a href="/explore" class="btn btn-see">See what we have now →</a>
+                </div>
+            </div>
+        </section>
     </main>
-
-    <!-- Footer -->
-    <footer>
-        <!-- Footer content will go here -->
-    </footer>
 
     <!-- Core JS -->
     <script src="js/utils/helpers.js"></script>
