Add logic Sign In, Sign Up, MOCK API for database for later

--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -20,11 +20,11 @@
             <div class="form-group">
                 <div class="role-selection">
                     <div class="role-option">
-                        <input type="radio" id="role-mentee" name="role" value="mentee" checked>
+                        <input type="radio" id="role-mentee" name="role" value="MENTEE" checked>
                         <label for="role-mentee" class="role-label">Mentee</label>
                     </div>
                     <div class="role-option">
-                        <input type="radio" id="role-mentor" name="role" value="mentor">
+                        <input type="radio" id="role-mentor" name="role" value="MENTOR">
                         <label for="role-mentor" class="role-label">Mentor</label>
                     </div>
                 </div>
