--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,8 @@
     <script src="js/utils/validation.js"></script>
     <script src="js/api/apiClient.js"></script>
     <script src="js/components/navigation.js"></script>
+    <script src="js/pages/auth/login.js"></script>
+    <script src="js/pages/auth/register.js"></script>
     <script src="js/router.js"></script>
     <script src="js/app.js"></script>
 </body>
