--- a/frontend/pages/signup.html
+++ b/frontend/pages/signup.html
@@ -1,3 +1,21 @@
+<div id="navbar-placeholder"></div>
+
+<!-- Load navbar component -->
+<script>
+// Load navbar into placeholder
+document.addEventListener('DOMContentLoaded', function() {
+    const navbarPlaceholder = document.getElementById('navbar-placeholder');
+    if (navbarPlaceholder) {
+        fetch('/components/navbar.html')
+            .then(response => response.text())
+            .then(html => {
+                navbarPlaceholder.innerHTML = html;
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+    }
+});
+</script>
+
 <div class="auth-container">
     <div class="auth-form-container">
         <h1>Sign up</h1>
