Finish Dashboard for Mentee

--- a/frontend/pages/dashboard/mentor-dashboard.html
+++ b/frontend/pages/dashboard/mentor-dashboard.html
@@ -6,7 +6,7 @@
             <!-- Row 1: Welcome Card -->
             <div class="card welcome-card">
                 <div class="card-content">
-                    <h3 class="card-title">Welcome&nbsp;<span id="user-name">User</span>! <span class="wave-emoji">👋</span></h3>
+                    <h3 class="card-title">Mentor&nbsp;<span id="user-name">User</span>! <span class="wave-emoji">👋</span></h3>
                     <p class="card-text">You have 2 upcoming sessions.</p>
                 </div>
                 <div class="card-action">
