--- a/frontend/pages/dashboard/mentee-dashboard.html
+++ b/frontend/pages/dashboard/mentee-dashboard.html
@@ -1,4 +1,4 @@
-<div class="dashboard-page">
+<div class="dashboard-page mentee-dashboard-page">
     <!-- Two-column layout for dashboard -->
     <div class="dashboard-columns">
         <!-- Left Column (65% width) -->
