Finish CSS for Find Mentor

--- a/frontend/pages/dashboard/my-mentor.html
+++ b/frontend/pages/dashboard/my-mentor.html
@@ -9,7 +9,7 @@
                 <div class="profile-card">
                     <img src="../images/mentor-profile.jpg" alt="Mentor Profile" class="profile-image" id="mentor-profile-image">
                     <h3 class="user-name" id="mentor-name">Dr. Jane Smith</h3>
-                    <p class="user-title" id="mentor-title">Senior Software Engineer at Tech Solutions Inc.</p>
+                    <p class="user-title" id="mentor-title">Senior Software Engineer<br>Tech Solutions Inc.</p>
                     <div class="mentor-skills">
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">React</span>
