Done Clean JavaScript

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -34,6 +34,11 @@
                             <i class="fas fa-chart-line"></i> <span>Dashboard</span>
                         </a>
                     </li>
+                    <li class="mentor-element">
+                        <a href="#main-dashboard" class="nav-item active" data-page="main-dashboard">
+                            <i class="fas fa-chart-line"></i> <span>Dashboard</span>
+                        </a>
+                    </li>
                     <li class="mentee-element mentor-assigned" style="display: none;">
                         <a href="#my-mentor" class="nav-item" data-page="my-mentor">
                             <i class="fas fa-user-tie"></i> <span>My Mentor</span>
@@ -346,5 +351,6 @@
                 });
         }
     </script>
+    <!-- Fix Mentor Data Script -->
 </body>
 </html>
