--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -17,6 +17,11 @@
 </head>
 <body>
     <!-- This is a standalone dashboard without the standard navbar -->
+    <!-- Mobile menu toggle button for responsive design -->
+    <button class="mobile-menu-toggle" id="mobile-menu-toggle">
+        <i class="fas fa-bars"></i>
+    </button>
+    
     <div class="dashboard-container">
         <!-- Dashboard Sidebar -->
         <aside class="dashboard-sidebar">
